[tool.poetry]
name = "pathfinder-cloudevents-service"
version = "0.0.0"
description = "Subscribe to Axia Pathfinder Events and send them to Kafka as CloudEvents."
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "pathfinderevents.py"}]

[tool.poetry.scripts]
pathfinderevents = 'pathfinderevents:main'

[tool.poetry.dependencies]
python = "^3.11"
configargparse = "^1.7"
cloudevents = "^1.12.0"
cherrypy = "^18.10.0"
kafka-python-ng = "^2.2.3"
pyyaml = "^6.0"
werkzeug = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.2.0"
pytest-ruff = "^0.5"
ruff = "^0.12.8"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --doctest-glob='*.md' --doctest-modules --cov --ignore=docs/ --ruff --mypy"
filterwarnings = [
    "ignore::DeprecationWarning:cherrypy",
    "ignore::DeprecationWarning:pkg_resources",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
