[tool.poetry]
name = "pathfinder-cloudevents-service"
version = "0.0.0"
description = "Subscribe to Axia Pathfinder Events and send them to Kafka as CloudEvents."
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "pathfinderevents.py"}]

[tool.poetry.scripts]
pathfinderevents = 'pathfinderevents:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^2.0.0"
quart = "^0.20.0"
aiokafka = "^0.13.0"
typed-settings = {version = "^25.3.0", extras = ["click", "attrs"]}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.2.0"
pytest-ruff = "^0.5"
ruff = "^0.15.7"

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--doctest-glob=*.md", "--doctest-modules", "--cov", "--ignore=docs/", "--ruff", "--mypy"]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
